--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ SESSION_SECRET=spotify_secret
 
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=admin123
+REDIS_URL=redis://default:MpJGFY9QA3jEEv8ERqxjgH3Ogu2CqNZ9@redis-17223.c273.us-east-1-2.ec2.cloud.redislabs.com:17223
